--- a/Genetic algorithm/style.css
+++ b/Genetic algorithm/style.css
@@ -12,12 +12,16 @@ body{
 	width: 100%;
 }
 
-#table{
-	margin-left: 200px;
-	margin-top: 50px;
-}
-
 #inputs_data{
     padding-left: 200px;
     padding-top: 50px;
+}
+
+#map{
+	margin-top: 20px;
+	margin-left: 200px;
+}
+
+#canvas{
+	border: 1px solid black;
 }
