--- a/style.css
+++ b/style.css
@@ -1,38 +1,90 @@
 html{
 	margin:0;
 	padding: 0;
-	height: 100%;
-	width: 100%;
+    box-sizing: border-box;
+}
+
+*,*::before, *::after{
+    box-sizing: inherit;
 }
 
 body{
 	margin: 0;
-	display: flex;
+    padding: 0;
     overflow: hidden;
+    background-color: var(--background-color);
+}
+
+:root{
+    --header-text-color: #d1d1d1;
+    --button-text-color: #ffffff;
+    --background-button-color: #c4b3ffe7;
+    --background-color: #000000;
 }
 
 #header{
-    margin: 40px auto;
-}
-
-.container{
-	display: block;
-    margin: 0px auto;
-    padding-top: 100px;
+    display: flex;
     justify-content: center;
-    position: absolute;
+    align-items: center;
+    width: 100vw;
+    height: 10vh;
+    margin: 0 auto;
+    font-family: 'Oswald', sans-serif;
+    font-weight:800;
+    font-size: 80px;
+    color: var(--header-text-color);
+}
+
+.nav_link{
+    display: inline-block;
+    width: 300px;
+    padding: 12px 24px;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    background-color:  var(--background-button-color);
+    font-family: 'Oswald', sans-serif;
+    font-weight:400;
+    font-size: 20px;
+    color: var(--button-text-color);
+    border-radius: 15px;
+}
+
+
+#links_to_algorithms{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     width: 100%;
-    height: 100%;
+    height: 70vh;
+    margin: 0 auto;
+    flex-direction: column;
 }
 
-#linksToAlgorithms{
-    justify-content: space-between;
-    text-align: center;
-    margin: 40px auto;
+#foter_text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Oswald', sans-serif;
+    font-weight:800;
+    font-size: 30px;
+    color: var(--header-text-color);
 }
 
-#linkToCreators{
-    justify-content: space-between;
-    text-align: center;
-    margin: 40px auto;
+.network_link{
+    text-decoration: none;
+    color:  var(--background-button-color);
+    font-family: 'Oswald', sans-serif;
+    font-weight:400;
+    font-size: 20px;
+    color: var(--button-text-color);
+    border-radius: 15px;
+}
+
+#link_to_creators{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
 }
