--- a/Neural network/style.css
+++ b/Neural network/style.css
@@ -1,24 +1,108 @@
 html{
-	margin:0 auto;
+	margin:0;
 	padding: 0;
-	height: 100%;
-	width: 100%;
+    box-sizing: border-box;
+}
+
+*,*::before, *::after{
+    box-sizing: inherit;
 }
 
 body{
-	margin:0 auto;
-	padding: 0;
-	height: 100%;
-	width: 100%;
+	margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: var(--background-color);
 }
 
-td{
-	margin:0px;
-	border: 2px solid #000000;
-	padding: 50px;
+:root{
+    --header-text-color: #ffffff;
+    --button-text-color: #ffffff;
+    --background-button-color: #c3b3ff;
+    --background-color: #000000;
 }
+
+#header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 10vh;
+    margin-bottom: 50px;
+}
+
+#home{
+	font-family: 'Oswald', sans-serif;
+    font-weight:800;
+    font-size: 80px;
+    color: var(--header-text-color);
+	text-decoration: none;
+}
+
+.dropdown {
+	position: relative;
+	display: flex;
+	justify-content: center;
+}
+
+.dropdown-content {
+	margin-top: 110px;
+	display: none;
+	position: absolute;
+	z-index: 1;
+	background-color: #ffffff00;
+}
+
+.dropdown-content a {
+	text-align: center;
+	padding: 12px 16px;
+	font-family: 'Oswald', sans-serif;
+    font-weight:400;
+	font-size: 20px;
+	background-color: var(--background-button-color);
+	color: var(--button-text-color);
+	text-decoration: none;
+	border-radius: 15px;
+	margin-bottom: 20px;
+	display: block;
+}
+
+.dropdown-content a:hover {background-color: #ab83ec;}
+.dropdown:hover .dropdown-content {display: block;}
+
+#main{
+	display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+	margin-bottom: 50px;
+}
+
+.nav_link {
+    display: flex;
+    padding: 16px 24px;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+	border: none;
+    background-color:  var(--background-button-color);
+    font-family: 'Oswald', sans-serif;
+    font-weight:400;
+    font-size: 20px;
+    color: var(--button-text-color);
+    border-radius: 15px;
+}
+
+.nav_link:hover {background-color: #ac83ec;}
 
 #table-container{
-	margin: 50px auto;
-	width: 400px;
+	display: flex;
+	justify-content: center;
+    width: 100%;
+} 
+
+td{
+	padding: 6vmin;
+	border-radius: 1vmin;
 }
+
+
