--- a/Neural network/style.css
+++ b/Neural network/style.css
@@ -67,11 +67,14 @@ body{
 	display: block;
 }
 
-.dropdown-content a:hover {background-color: #ab83ec;}
-.dropdown:hover .dropdown-content {display: block;}
+@media (min-width: 768px) {
+    .dropdown-content a:hover {background-color: #ab83ec;}
+    .dropdown:hover .dropdown-content {display: block;}
+}
 
 #main{
 	display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     width: 100%;
 	margin-bottom: 50px;
@@ -80,19 +83,27 @@ body{
 .nav_link {
     display: flex;
     padding: 16px 24px;
-    font-size: 16px;
     text-align: center;
     text-decoration: none;
 	border: none;
     background-color:  var(--background-button-color);
     font-family: 'Oswald', sans-serif;
     font-weight:400;
-    font-size: 20px;
+    font-size: 25px;
     color: var(--button-text-color);
     border-radius: 15px;
 }
 
 .nav_link:hover {background-color: #ac83ec;}
+
+@media (max-width: 768px) {
+    .nav_link {
+        margin-bottom: 5px;
+        padding: 6px 8px;
+        font-size: 20px;
+        border-radius: 10px;
+    }
+}
 
 #table-container{
 	display: flex;
