--- a/Ant algorithm/style.css
+++ b/Ant algorithm/style.css
@@ -1,25 +1,125 @@
 html{
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+	margin:0;
+	padding: 0;
+    box-sizing: border-box;
+}
+
+*,*::before, *::after{
+    box-sizing: inherit;
 }
 
 body{
-    width: 100%;
-    height: 100%;
-    margin: 0;
+	margin: 0;
     padding: 0;
+    /* overflow: hidden; */
+    background-color: var(--background-color);
 }
 
-#inputs{
-    margin-left: 200px;
-    margin-top: 20px;
+:root{
+    --header-text-color: #ffffff;
+    --button-text-color: #ffffff;
+    --background-button-color: #c3b3ff;
+    --background-color: #000000;
 }
 
-#canvas {
-    background-color: aliceblue;
-    border: 5px solid #333;
-    margin-left: 200px;
-    margin-top: 50px;
+#header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 10vh;
+    margin-bottom: 50px;
 }
+
+#home{
+	font-family: 'Oswald', sans-serif;
+    font-weight:800;
+    font-size: 80px;
+    color: var(--header-text-color);
+	text-decoration: none;
+}
+
+.dropdown {
+	position: relative;
+	display: flex;
+	justify-content: center;
+}
+
+.dropdown-content {
+	margin-top: 110px;
+	display: none;
+	position: absolute;
+	z-index: 1;
+	background-color: #ffffff00;
+}
+
+
+
+.dropdown-content a {
+	text-align: center;
+	padding: 12px 16px;
+	font-family: 'Oswald', sans-serif;
+    font-weight:400;
+	font-size: 20px;
+	background-color: var(--background-button-color);
+	color: var(--button-text-color);
+	text-decoration: none;
+	border-radius: 15px;
+	margin-bottom: 20px;
+	display: block;
+}
+
+@media (min-width: 900px) {
+    .dropdown-content a:hover {background-color: #ab83ec;}
+    .dropdown:hover .dropdown-content {display: block;}
+}
+
+
+#main{
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 100%;
+	margin-bottom: 50px;
+}
+
+.nav_link {
+    margin-left: 5px;
+    margin-bottom: 10px;
+    display: flex;
+    padding: 16px 24px;
+    text-align: center;
+    text-decoration: none;
+	border: none;
+    background-color:  var(--background-button-color);
+    font-family: 'Oswald', sans-serif;
+    font-weight:400;
+    font-size: 25px;
+    color: var(--button-text-color);
+    border-radius: 15px;
+}
+
+.nav_link:hover {background-color: #ac83ec;}
+
+@media (max-width: 768px) {
+    .nav_link {
+        margin-bottom: 5px;
+        padding: 6px 8px;
+        font-size: 20px;
+        border-radius: 10px;
+    }
+}
+
+
+#table{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+
+#canvas{
+	background-color: rgb(255, 255, 255);
+    border: 10px;
+}
+
