--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html{
 body{
 	margin: 0;
     padding: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
     background-color: var(--background-color);
 }
 
@@ -28,7 +28,7 @@ body{
     align-items: center;
     width: 100vw;
     height: 10vh;
-    margin: 0 auto;
+    margin-bottom: 20px;
     font-family: 'Oswald', sans-serif;
     font-weight:800;
     font-size: 80px;
@@ -52,26 +52,13 @@ body{
 
 .nav_link:hover {background-color: #ac83ec;}
 
-
-
 #links_to_algorithms{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
     height: 70vh;
-    margin: 0 auto;
     flex-direction: column;
-}
-
-#foter_text{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Oswald', sans-serif;
-    font-weight:800;
-    font-size: 30px;
-    color: var(--header-text-color);
 }
 
 .network_link{
@@ -84,8 +71,17 @@ body{
     border-radius: 15px;
 }
 
+#foter_text{
+    display: flex;
+    justify-content: center;
+    font-family: 'Oswald', sans-serif;
+    font-weight:800;
+    font-size: 30px;
+    color: var(--header-text-color);
+}
+
 #link_to_creators{
-    margin-top: 20px;
+    margin-bottom: 20px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
